--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-watch": "^5.0.1",
+    "jquery": "^3.3.1",
     "natives": "^1.1.6",
     "normalize-scss": "^7.0.1",
     "rimraf": "^2.6.2",
