--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-watch": "^5.0.1",
+    "imask": "^4.1.5",
     "jquery": "^3.3.1",
     "natives": "^1.1.6",
     "normalize-scss": "^7.0.1",
