--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"watchify": "^3.11.1"
 	},
 	"devDependencies": {
-		"babel-preset-es2015": "^6.24.1"
+		"babel-preset-es2015": "^6.24.1",
+		"trello": "^0.9.1"
 	}
 }
