--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"enduro": "*",
 		"imask": "^4.1.5",
 		"jquery": "^3.3.1",
+		"jquery-validation": "^1.19.0",
 		"normalize-scss": "^7.0.1",
 		"vinyl-source-stream": "^2.0.0",
 		"watchify": "^3.11.1"
