--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
 		"jquery": "^3.3.1",
 		"jquery-validation": "^1.19.0",
 		"normalize-scss": "^7.0.1",
+		"query-string": "^6.4.2",
 		"trello": "^0.9.1",
+		"utf8": "^3.0.0",
 		"vinyl-source-stream": "^2.0.0",
 		"watchify": "^3.11.1"
 	},
